--- a/templates/home.html
+++ b/templates/home.html
@@ -7,14 +7,12 @@
 	</head>
 
 	<body>
-		<div>
-			<div>
-				<input id="search_content" type="text" value="">
+		<div style="text-align:center;padding:20px;">
+			<div style="padding:20px;">
+				<button id="change_button" style="margin-right:20px;">Change Search Videos</button>
+				<input id="search_content" type="text" value="" style="margin-right:20px;">
 				<button id="search_button">Search</button>
 			</div>
-            <div>
-				<button id="change_button">Change Search Videos</button>
-            </div>
 			<div>
 				<div id="search_div"  style="display:inline-block;vertical-align: top;">
 				</div>
