search by rank opt

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,9 +9,11 @@
 	<body>
 		<div style="text-align:center;padding:20px;">
 			<div style="padding:20px;">
-				<button id="change_button" style="margin-right:20px;">Change Search Videos</button>
-				<input id="search_content" type="text" value="" style="margin-right:20px;">
+				<button id="change_button" style="margin-right:10px;">Change Search Videos</button>
+				<input id="search_content" type="text" value="" style="margin-right:10px;">
 				<button id="search_button">Search</button>
+                <span id="video_name" style="margin-left:10px;margin-right:20px;font-weight:bold;color:#5F9EA0;">
+                </span>
 			</div>
 			<div>
 				<div id="search_div"  style="display:inline-block;vertical-align: top;">
